PR/50863: John Hein: libedit el_end() messes up term settings if piped Keep track if we initialized the tty, and only reset it if we did.